--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "luiscnsousa",
+    "ApiKey": "573458424355888",
+    "ApiSecret": "HP5npXGBcEjMOxLhWrc-gKJCo2k"
+  }
 }
