--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-
 # Created by https://www.gitignore.io/api/macos,jetbrains,aspnetcore,visualstudio,visualstudiocode
 # Edit at https://www.gitignore.io/?templates=macos,jetbrains,aspnetcore,visualstudio,visualstudiocode
 
@@ -26,6 +25,7 @@ bld/
 [Bb]in/
 [Oo]bj/
 [Ll]og/
+wwwroot
 
 # Visual Studio 2015 cache/options directory
 .vs/
