--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -3,7 +3,7 @@
     "TokenKey": "super secret key"
   },
   "ConnectionStrings":{
-    "DefaultConnection": "Data Source=datingapp.db"
+    "DefaultConnection": "Server=localhost; Database=datingapp; Uid=appuser; Pwd=password"
   },
   "Logging": {
     "LogLevel": {
