--- a/Docker/docker-compose.yml
+++ b/Docker/docker-compose.yml
@@ -8,9 +8,9 @@ services:
       # So you don't have to use root, but you can if you like
       MYSQL_USER: 'appuser'
       # You can use whatever password you like
-      MYSQL_PASSWORD: 'password'
+      MYSQL_PASSWORD: 'Pa$$w0rd'
       # Password for root access
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: 'Pa$$w0rd'
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
